[package]
name = "wasm-accumulo-access"
publish = false
version = "0.1.0"
edition = "2021"
authors = ["Lars Wilhelmsen <sral-backwards@sral.org>"]
description = "WASM API for parsing and evaluating Accumulo Access Expressions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/larsw/accumulo-access-rs"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
accumulo-access = { version = "0.1.0", path = "../accumulo-access" }
js-sys = { version = "0.3.66", features = [] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
