[package]
name = "wasm-accumulo-access"
publish = false
version = "0.1.7"
edition = "2021"
authors = ["Lars Wilhelmsen <sral-backwards@sral.org>"]
description = "WASM API for parsing and evaluating Accumulo Access Expressions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/larsw/accumulo-access-rs"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
accumulo-access = { version = "0.1.7", path = "../accumulo-access" }
js-sys = { version = "0.3.69", features = [] }
web-sys = { version ="0.3.69", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
